--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
-    "jquery": "^3.4.1",
     "json-loader": "^0.5.7",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
@@ -34,10 +33,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.10.0",
     "moment": "^2.24.0",
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "request": "^2.88.0"
   }
 }
